--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     Your browser does not support the audio element.
   </audio>
 
-  <div>
+  <div class="wrapper">
+    <h1>ENTER THE PORTAL</h1>
     <a id="portal-link">
       <img id="portal" src="portal-2.gif" alt="">
     </a>
