--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
 
   <div class="wrapper">
   <div id="about">
-    Hi! <br> I'm Solymosi Szabolcs and i am an artist, kinda.... 😅<br> i like to draw✍️,<br> to make music🎵<br> or videos🎬<br> coding👨‍💻 <br> or anything related to art! 🎨 
+  <img src="about-me.png" alt="">
   </div>
 </div>
 
