--- a/home.html
+++ b/home.html
@@ -25,8 +25,6 @@
     Your browser does not support the audio element.
   </audio>
 
-  
-
   <header>
     <div class="container">
       <h1 id="header-title">My Portfolio</h1>
@@ -42,11 +40,22 @@
   </header>
 
   <div class="wrapper">
-  <div id="about">
-  <img src="about-me.png" alt="">
-  </div>
-</div>
+    <div class="section" id="about">
+      <img src="about-me.png" alt="">
+    </div>
+    
+    <div class="section" id="projects">
+      <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+      padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+      border-radius: 8px; will-change: transform;">
+       <iframe style="position: absolute; width: 108%; height: 108%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+         src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFkTXyTT5E&#x2F;view?embed"">
+       </iframe>
+     </div>
 
+    </div>
+  </div>
+  
 
   <script src="script.js" defer></script>
   <script>
@@ -56,15 +65,26 @@
     });
 
     const aboutLink = document.querySelector('a[href="#about"]');
-      aboutLink.addEventListener("click", function(event) {
-        event.preventDefault();
-        const aboutSection = document.getElementById("about");
-        const offsetTop = aboutSection.getBoundingClientRect().top + window.pageYOffset;
-        window.scroll({
-          top: offsetTop,
-          behavior: "smooth" // Add the smooth behavior for the scroll animation
-        });
+    aboutLink.addEventListener("click", function(event) {
+      event.preventDefault();
+      const aboutSection = document.getElementById("about");
+      const offsetTop = aboutSection.getBoundingClientRect().top + window.pageYOffset;
+      window.scroll({
+        top: offsetTop,
+        behavior: "smooth" // Add the smooth behavior for the scroll animation
       });
+    });
+
+    const projectsLink = document.querySelector('a[href="#projects"]');
+  projectsLink.addEventListener("click", function(event) {
+    event.preventDefault();
+    const projectsSection = document.getElementById("projects");
+    const offsetTop = projectsSection.getBoundingClientRect().top + window.pageYOffset;
+    window.scroll({
+      top: offsetTop,
+      behavior: "smooth"
+    });
+  });
   </script>
 </body>
 
