--- a/home.html
+++ b/home.html
@@ -45,13 +45,21 @@
     </div>
     
     <div class="section" id="projects">
-      <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+      <div id="bg" style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
       padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
       border-radius: 8px; will-change: transform;">
        <iframe style="position: absolute; width: 108%; height: 108%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
          src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFkTXyTT5E&#x2F;view?embed"">
        </iframe>
      </div>
+
+     <div id="mobile-bg" style="position: relative; width: 100%; height: 0; padding-top: 177.7778%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 110%; height: 110%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFpw_KH9po&#x2F;view?embed">
+  </iframe>
+</div>
 
     </div>
   </div>
