--- a/home.html
+++ b/home.html
@@ -61,8 +61,34 @@
   </iframe>
 </div>
 
+<div class="form-container">
+<div class="section" id="contact">
+  <p>Contact Me</p>
+  <form action="https://formsubmit.co/49b9f228869a9981d6cc97e240a5055a" method="post" id="contact-form">
+    
+    <input type="hidden" name="_next" value="thank-you.html">
+    
+    <div class="form-group">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
+    </div>
+
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+    </div>
+
+    <div class="form-group">
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" rows="4" required></textarea>
+    </div>
+
+    <button type="submit">Submit</button>
+  </form>
+
     </div>
   </div>
+</div>
   
 
   <script src="script.js" defer></script>
@@ -88,6 +114,17 @@
     event.preventDefault();
     const projectsSection = document.getElementById("projects");
     const offsetTop = projectsSection.getBoundingClientRect().top + window.pageYOffset;
+    window.scroll({
+      top: offsetTop,
+      behavior: "smooth"
+    });
+  });
+
+  const contactLink = document.querySelector('a[href="#contact"]');
+  contactLink.addEventListener("click", function(event) {
+    event.preventDefault();
+    const contactSection = document.getElementById("contact");
+    const offsetTop = contactSection.getBoundingClientRect().top + window.pageYOffset;
     window.scroll({
       top: offsetTop,
       behavior: "smooth"
