--- a/home.html
+++ b/home.html
@@ -66,7 +66,7 @@
   <p>Contact Me</p>
   <form action="https://formsubmit.co/49b9f228869a9981d6cc97e240a5055a" method="post" id="contact-form">
     
-    <input type="hidden" name="_next" value="thank-you.html">
+    <input type="hidden" name="_next" value="https://sebvalentine.github.io/diablo-like-landing-page/thank-you.html">
     
     <div class="form-group">
       <label for="name">Name:</label>
