--- a/thank-you.html
+++ b/thank-you.html
@@ -3,15 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="thank-you.css">
     <title>Thank You</title>
 </head>
+<style>
+    body, html {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+
+    #container {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16);
+        overflow: hidden;
+        border-radius: 8px;
+        will-change: transform;
+    }
+
+    iframe {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        border: none;
+        padding: 0;
+        margin: 0;
+    }
+</style>
+
 <body>
 
     <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFqAwcLeoQ&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 110%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFqAwcLeoQ&#x2F;view?embed">
   </iframe>
 </div>
 
