--- a/thank-you.html
+++ b/thank-you.html
@@ -11,6 +11,7 @@
         height: 100%;
         margin: 0;
         padding: 0;
+        background-color: black;
     }
 
     #container {
@@ -33,15 +34,37 @@
         padding: 0;
         margin: 0;
     }
+
+    #mobile {
+        display: none;
+    }
+
+    @media (max-width: 768px) {
+        #mobile {
+            display: block;
+        }
+        #desktop {
+            display: none;
+        }
+  }
 </style>
 
 <body>
 
-    <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+    <div id="desktop" style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 110%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 108%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFqAwcLeoQ&#x2F;view?embed">
+  </iframe>
+</div>
+
+
+<div id="mobile" style="position: relative; width: 100%; height: 0; padding-top: 177.7778%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 108%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFqBDtZ4Ks&#x2F;view?embed">
   </iframe>
 </div>
 
